package HojaDeCalculo;

class Celda {
    private String contenido;

    public Celda() {
        contenido = "";
    }

    public String getContenido() {
        return contenido;
    }

    public void setContenido(String contenido) {
        this.contenido = contenido;
    }
}